--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="referrer" content="no-referrer" />
     <title>影视论坛 - 分享你的观影体验</title>
     <meta name="description" content="专业的影视讨论平台，分享最新电影、电视剧评论和观影心得" />
   </head>
